poc(java): the drift bar, the floor harness, and STATE.md
The across-build drift control (`gen/drift.sh`), run against the DELTA instrument rather
than the main bench -- the main bench rebuilds a protobuf pool between rounds so its
baseline is honest, and drifting it would measure that collector twice. Worst drift of the
paired median ratio over three neutrally perturbed builds: **0.078**, against the cpp
slice's 0.240 for a whole harness. `logs/java/drift.log` tabulates which conclusions clear
it: every batching row on the nested payloads and decision 9's absent-path row do, and the
sub-two-percent rows do not and are quoted as a sign plus an arithmetic agreement instead.

README 5.2's three arms (`gen/floor.sh`), with arm b emitted into a package of its own so
the floor-against-target ratio is paired inside one process rather than formed across two.
All three pass the 437-check correctness gate, and in arm c the two packages are the same
source, which makes its arm-b rows a positive control that must read zero.

Also: the published Java encode regression reconstructed. Dividing this slice's `ffi-take`
by its `pbj-loop` -- the same arm measured against a loop over one memoized message -- gives
1.26 to 1.85 against a published 1.08 to 1.84. That is a mechanism which would produce the
published shape, measured here, not a claim about a harness whose sources do not survive.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BQKpqcsfD22PYgnx4nW5SJ